--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ matrix:
   include:
   - env: SBT_VERSION="0.13.16"
     jdk: openjdk7
-    scala: 2.10.6
+    scala: 2.10.7
 
-  - env: SBT_VERSION="1.0.0-RC3"
+  - env: SBT_VERSION="1.1.1"
     jdk: oraclejdk8
-    scala: 2.12.2
+    scala: 2.12.4
 
 cache:
   directories:
